--- a/src/components/aluno/LockedScreen.module.css
+++ b/src/components/aluno/LockedScreen.module.css
@@ -120,7 +120,7 @@
 .cycleLabel {
   font-size: 11px;
   font-weight: 600;
-  color: var(--text-disabled);
+  color: var(--text-tertiary);
 }
 
 .cycleLabelDone {
