--- a/src/pages/admin/AdminPRFeed.module.css
+++ b/src/pages/admin/AdminPRFeed.module.css
@@ -90,7 +90,7 @@
 
 .recordBadge {
   font-size: 13px;
-  color: var(--text-disabled);
+  color: var(--text-tertiary);
 }
 
 .highlight {
